--- a/index.html
+++ b/index.html
@@ -10,15 +10,15 @@
 
 <div class="wrap">
 	<ol>
-		<li><h2>Find a Store to Shop in</h2><p>Search for a store you want to visit by country, city, product type,
-		brand style and/or other detail</p><hr></li>
-		<li><h2>Hire a personal Shopper To Shop for You</h2><p>Select the person who speaks your language to shop
+		<li><h2><a href="#"> Find a Store to Shop in</a></h2><p>Search for a store you want to visit by country, city, product type,
+		brand style and/or other detail</a></p><hr></li>
+		<li><h2><a href="#">Hire a personal Shopper To Shop for You</a></h2><p>Select the person who speaks your language to shop
 		in your chosen store for you</p><hr></li>
-		<li><h2>Schedule a Shopping Session</h2><p>Agree on a video conference time the suits all: you, the store,
+		<li><h2><a href="#">Schedule a Shopping Session</a></h2><p>Agree on a video conference time the suits all: you, the store,
 		and the personal shopper</p><hr></li>
-		<li><h2>Enjoy Your Video Conference Shopping</h2><p>Have you hired personal shopper shop on your behalf
+		<li><h2><a href="#">Enjoy Your Video Conference Shopping</a></h2><p>Have you hired personal shopper shop on your behalf
 		using HD quality video conference.</p><hr></li>
-		<li><h2>Get Your Products Delivered</h2><p>Get your purchased products delivered to you by courier mail</p></li>
+		<li><h2><a href="#">Get Your Products Delivered</a></h2><p>Get your purchased products delivered to you by courier mail</p></li>
 	</ol>
 </div>
 </body>
